Fix button spacing

--- a/assets/css/less/wordpress-default-themes.less
+++ b/assets/css/less/wordpress-default-themes.less
@@ -1,8 +1,8 @@
 .wpbdp-wp-theme-twentytwentyone {
     .wpbdp-main-box {
         .submit-btn input[type="submit"] {
-            padding: 15px 12px;
-            font-size: 15px;
+            padding: 16px 12px;
+            font-size: 14px;
         }
         .box-col {
             .distance-field {
